# a2a-client-server-agent-router

./: .gitignore  README.md
a2a-client/: a2a_orchestration_client.py  a2a_orchestration_client_stream.py  requirements.txt
ai-chat-frontend-keycloak-auth/: README.md  package-lock.json  package.json
facade-agent/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
facade-agent/db/mongodb/: address_schema.json  customers_schema.json  docker-compose.yml  sales_schema.json  users_schema.json
facade-agent/db/postgres/: README.md  docker-compose.yml  init.sql  postgres_address.sql  postgres_customers.sql  postgres_sales.sql  postgres_users.sql
facade-agent/src/ai_app/: app.py
facade-agent/src/ai_app/config/: settings.py
facade-agent/src/ai_app/exceptions/: exception.py
facade-agent/src/ai_app/exceptions/mappers/: mappers.py
facade-agent/src/ai_app/iam/: keycloak.py
facade-agent/src/ai_app/llm_models/: model_registry.py  models.py
facade-agent/src/ai_app/logger/: log_config.py  log_level.py  thread_local_context.py
facade-agent/src/ai_app/middleware/: access_logger_middleware.py
facade-agent/src/ai_app/models/request/: request_model.py
facade-agent/src/ai_app/models/response/: response_model.py  status.py
facade-agent/src/ai_app/rest_api/: http.py
facade-agent/src/ai_app/router/: agent_mongo_router.py  agent_postgres_router.py  agent_websocket_router.py  agent_websocket_router_mcp.py  atlas_router.py  facade_websocket.py  health_router.py
facade-agent/src/ai_app/utils/: enum.py  utils.py
jira-agent/: a2a_jira_server.py  agent.py  agent_executor.py  auth_middleware.py  context_vars.py  docker-compose.yml  redis_semantic_cache.py  requirements.txt
mcp/: mcp_server.py  mcp_server_ide_ui.py  mcp_server_ide_ui_latest_version_fastmcp_mcp.py  mcp_server_ide_ui_server_start_stateless_http.py  requirements.txt
orchestration-agent/: agent.py  agent_executor.py  orchestration_agent.py  requirements.txt
(+19 files in other folders)
